Added seminar title

--- a/Seminararbeit.tex
+++ b/Seminararbeit.tex
@@ -6,10 +6,9 @@
 \title{Proseminar 2013}
 \author{Kevin Seidel \\ Studiengang Informatik \\ Matrikelnummer: 943147}
 
-
 \begin{document}
 
-\thispagestyle{empty}
+\begin{titlepage}
 \begin{center}
 \vspace*{2cm}
 \begin{Large}
@@ -20,6 +19,7 @@
 \\[1.5cm]
 SEMINARARBEIT \\[1cm]
 zum Proseminar \\[1cm]
+\textbf{Makroökonomie} \\[1cm]
 im Sommersemester 2013 \\[3cm]
 Thema : \\[1cm]
 \textbf{Mein Thema} \\[1cm]
@@ -33,16 +33,25 @@ Vorgelegt von: \hfill Kevin Seidel \\
 \hfill 49124 Georgsmarienhütte
 \end{flushleft}
 
-\pagebreak
+\end{titlepage}
 
+\newpage
+
+\pagenumbering{Roman} 
+\setcounter{page}{2}
 \tableofcontents
 
-\pagebreak
+
+
+\newpage
+\pagenumbering{arabic} 
+\setcounter{page}{1} 
+
 
 \section{Einleitung}
 
 Das ist ein Test.
-\pagebreak
+\newpage
 
 \section{Test}
 
