Change to 1.5 line spacing and fixed side spacing

--- a/Seminararbeit.tex
+++ b/Seminararbeit.tex
@@ -1,6 +1,10 @@
 \documentclass[a4paper,12pt]{scrartcl}
 \usepackage[applemac]{inputenc}
 \usepackage{ngerman}
+\usepackage{setspace}
+\onehalfspacing
+\usepackage{geometry}
+\geometry{a4paper, top=25mm, left=30mm, right=25mm, bottom=25mm}
 
 \title{Proseminar 2013}
 \author{Kevin Seidel \\ Studiengang Informatik \\ Matrikelnummer: 943147}
@@ -19,7 +23,7 @@
 SEMINARARBEIT \\[1cm]
 zum Proseminar \\[1cm]
 \textbf{Makroškonomie} \\[1cm]
-im Sommersemester 2013 \\[3cm]
+im Sommersemester 2013 \\[1.5cm]
 Thema : \\[1cm]
 \textbf{Mein Thema} \\[1cm]
 Referent: Prof. Dr. Valeriya Dinger \\[2cm]
