Some test stuff

--- a/Seminararbeit.tex
+++ b/Seminararbeit.tex
@@ -56,8 +56,20 @@ Vorgelegt von: \hfill Kevin Seidel \\
 Das ist ein Test.
 \newpage
 
-\section{Test}
+\section{Hauptteil}
+\subsection{Teil 1}
 
 Test auf Seite 2!
+\newpage
+\subsection{Teil 2}
+
+Blabla!
+\newpage
+
+\section{Literaturverzeichnis}
+\newpage
+
+\section{Anhang}
+
 
 \end{document}
