--- a/Seminararbeit.tex
+++ b/Seminararbeit.tex
@@ -13,7 +13,7 @@
 
 \begin{titlepage}
 \begin{center}
-\vspace*{2cm}
+\vspace*{1.5cm}
 \begin{Large}
 \textbf{Universität Osnabrück} \\[1cm]
 \end{Large}
@@ -25,7 +25,7 @@ zum Proseminar \\[1cm]
 \textbf{Makroökonomie} \\[1cm]
 im Sommersemester 2013 \\[1.5cm]
 Thema : \\[1cm]
-\textbf{Mein Thema} \\[1cm]
+\textbf{Banken und ihr systemisches Risiko} \\[1cm]
 Referent: Prof. Dr. Valeriya Dinger \\[2cm]
 
 \end{center}
