added pdf and changed some things

--- a/Seminararbeit.tex
+++ b/Seminararbeit.tex
@@ -52,7 +52,9 @@ Vorgelegt von: \hfill Kevin Seidel \\
 
 
 \section{Einleitung}
-Diese Proseminararbeit behandelt die wissenschaftliche Publikation ''A framework for assessing the systemic risk of major financial institutions'' von Xia Huang, Hao Zhou und Haibin Zhu. In dieser Arbeit wird ein System zur Bestimmung und zum stresstesten des systemischen Risikos, am Beispiel der zwölf größten US-amerikanischen Banken, dargelegt. Das systemische Risiko wird hier durch die theoretische Versicherungsprämie einer Versicherung, gegen einen Verlust der 15\% oder mehr der Passiva ausmacht, dargestellt. Der Zeitraum der Analyse der Banken erstreckt sich von 2001 bis 2008. Zur Bestimmung des systemischen Risikos bzw. der Versicherungsprämie wird hier die risikoneutrale Ausfallwahrscheinlichkeit und die Gesamtkapitalrentabilität verwendet.
+Diese Proseminararbeit behandelt die wissenschaftliche Publikation ''A framework for assessing the systemic risk of major financial institutions'' von Xia Huang, Hao Zhou und Haibin Zhu. In dieser Arbeit wird ein System zur Bestimmung des systemischen Risikos und ein Stresstest dieses Systems, am Beispiel der zwölf größten US-amerikanischen Banken, dargelegt. 
+Das systemische Risiko wird hier als Prämie für eine Versicherung gegen finanzielle Ausfälle dargestellt. Diese Versicherungsprämie errechnet sich aus den vorhergesagten Ausfallwahrscheinlichkeiten und der Korrelation der Gesamtkapitalrentabilität. Diese Messung sind marktbasiert und damit deutlich hochfrequenter als eine Auswertung anhand von Bilanzen, welche meist quartalsweise erscheinen. 
+Das systemische Risiko wird hier durch die theoretische Versicherungsprämie einer Versicherung, gegen einen Verlust, der 15\% oder mehr der Passiva ausmacht, dargestellt. Der Zeitraum der Analyse der Banken erstreckt sich von 2001 bis 2008. Zur Bestimmung des systemischen Risikos bzw. der Versicherungsprämie wird hier die risikoneutrale Ausfallwahrscheinlichkeit und die Gesamtkapitalrentabilität verwendet.
 \newpage
 
 \section{Hauptteil}
