Introduction improved, added classification, started data part

--- a/Seminararbeit.tex
+++ b/Seminararbeit.tex
@@ -54,22 +54,36 @@ Vorgelegt von: \hfill Kevin Seidel \\
 \section{Einleitung}
 Diese Proseminararbeit behandelt die wissenschaftliche Publikation ''A framework for assessing the systemic risk of major financial institutions'' von Xia Huang, Hao Zhou und Haibin Zhu. In dieser Arbeit wird ein System zur Bestimmung des systemischen Risikos und ein Stresstest dieses Systems, am Beispiel der zwölf größten US-amerikanischen Banken, dargelegt.
 
-Das systemische Risiko wird hier als Prämie für eine Versicherung gegen finanzielle Ausfälle innerhalb der nächsten 12 Monate dargestellt. Diese Versicherungsprämie errechnet sich aus den vorhergesagten Ausfallwahrscheinlichkeiten und der Korrelation der Gesamtkapitalrentabilität. Die Messungen sind marktbasiert und damit deutlich hochfrequenter als eine Auswertung anhand von Bilanzen, welche meist quartalsweise erscheinen. 
+Diese Publikation ist in 3 grobe Abschnitte unterteilt. Im ersten Abschnitt wird auf das methodische Vorgehen des von den Autoren entwickelten Systems eingegangen. Diese Methodik ist wiederum in zwei Abschnitte unterteilt.
 
-Für die Durchführung des Stresstests wird ein integriertes Mikro-Makro-Modell genutzt, welche nicht nur die Auswirkungen des Marktes auf das Bankwesen berücksichtigt, sondern auch die Rückwirkung des Bankwesens auf den Rest der Ökonomie. Dieser Stresstest besteht aus zwei Schritten. Im ersten Schritt wird das ökonomisches Modell dazu genutz den Zusammenhang zwischen der Anlagenqualität und den zugrundeliegenden Faktoren zu prüfen. Der zweite Schritt besteht darin, mit Hilfe des Modells, die Auswirkungen von extremen Änderungen der zugrundeliegenden Faktoren, auf den Finanzmarkt zu bestimmen. Hierbei werden, in der Regel, historische oder hypothetische Szenarien verwendet.
+Im ersten Abschnitt der Methodik geht des um das systemische Risiko. Es wird hier als Prämie für eine Versicherung gegen finanzielle Ausfälle innerhalb der nächsten 12 Monate dargestellt. Diese Versicherungsprämie errechnet sich aus den vorhergesagten Ausfallwahrscheinlichkeiten und der Korrelation der Unternehmensrentabilität. Die Messungen sind marktbasiert und damit deutlich hochfrequenter als eine Auswertung anhand von Bilanzen, welche meist quartalsweise erscheinen. 
+
+Der zweite Abschnitt der Methodik befasst sich mit dem Stresstest ihres Systems zur Bestimmung des systemischen Risikos. Für die Durchführung dieses Stresstests wird ein integriertes Mikro-Makro-Modell genutzt, welche nicht nur die Auswirkungen des Marktes auf das Bankwesen berücksichtigt, sondern auch die Rückwirkung des Bankwesens auf den Rest der Ökonomie. Dieser Stresstest besteht aus zwei Schritten. Im ersten Schritt wird das ökonomisches Modell dazu genutz den Zusammenhang zwischen der Anlagenqualität und den zugrundeliegenden Faktoren zu prüfen. Der zweite Schritt besteht darin, mit Hilfe des Modells, die Auswirkungen von extremen Änderungen der zugrundeliegenden Faktoren, auf den Finanzmarkt zu bestimmen. Hierbei werden, in der Regel, historische oder hypothetische Szenarien verwendet.
+
+Auf die verwendeten Beispieldaten wird im zweiten Abschnitt der Arbeit eingegangen. Hierbei wurden die Daten und Werte der zwölf größten amerikanischen Banken über die Jahre 2001 bis 2008 genutzt.
+
+Im dritten und letzten Abschnitt werden die Ergebnisse dargelegt, welche durch Anwendung der Methoden aus dem ersten Teil, entstanden sind. 
 \newpage
 
-\section{Hauptteil}
-\subsection{Teil 1}
-\subsubsection{1.1.1}
+\section{Methodisches Vorgehen}
+\subsection{Bestimmung des systemischen Risikos}
 
 Test auf Seite 2!
 \newpage
-\subsection{Teil 2}
+\subsection{Stresstest}
 
 Blabla!
 \newpage
+\section{Daten}
+Für die empirische Überprüfung der vorher beschriebenen Methoden werden Messwerte benötigt. Hier werden Werte aus dem Bankwesen benutzt, prinzipiell lassen sich mit dieser Methodik aber auch andere Portfolios untersuchen, solange sie die benötigten Vorraussetzungen, wie z.B. einen Kreditausfall-Swap, besitzen. 
+Die hier verwendeten Messwerte stammen aus dem Zeitraum von Januar 2000 bis zum Mai 2008. Es wurden die, zu der Zeit, größten amerikanischen Finanzunternehmen untersucht. Zu den gehörten die Bank of America, Bank of New York, Bear Stearns, Citibank, Goldman Sachs, JP Morgan Chase, Lehman Brothers, Merrill Lynch, Morgan Stanley, State Street Corp, Wachovia und Wells Fargo. 
+Für die Analysen wurden wöchentlich aktualisierte Kreditausfall-Swap-Prämien, Korrelationswerte, welche aus den täglichen Aktienkursen errechnet wurden, und makro-finanzielle Werte, die den aktuellen Zustand der Makroökonomie wiederspiegeln,  verwendet.
 
+\newpage
+\section{Empirisches Ergebnis}
+\newpage
+\section{Fazit}
+\newpage
 \section{Literaturverzeichnis}
 \newpage
 
