--- a/Seminararbeit.tex
+++ b/Seminararbeit.tex
@@ -69,16 +69,32 @@ Im dritten und letzten Abschnitt werden die Ergebnisse dargelegt, welche durch A
 \subsection{Bestimmung des systemischen Risikos}
 Zur Bestimmung des systemischen Risikos werden zwei Schritte durchlaufen. Zunächst wird das Risikoprofil eines Portfolios bestimmt. Dies geschieht anhand der Ausfallwahrscheinlichkeit und der Kapitalrenditen-Korrelation.
 Im zweiten Schritt wird aus diesen beiden Werten der Indikator für das systemische Risiko errechnet, was in unserem Fall die Prämie einer theoretischen Versicherung gegen einen größeren Verlust ist.
-\subsubsection{risiko-neutrale Ausfallwahrscheinlichkeit}
-Die risiko-neutrale Ausfallwahrscheinlichkeit wird direkt aus den Kreditausfall-Swap-Prämien errechnet. Die Formel hierzu lautet: 
+\subsubsection{Risiko-neutrale Ausfallwahrscheinlichkeit}
+Die Ausfallwahrscheinlichkeit beschreibt die Wahrscheinlichkeit, dass eine Forderung nicht zurückgezahlt wird.
+
+In diesem Modell wird die risiko-neutrale Ausfallwahrscheinlichkeit verwendet. Bei einer risiko-neutralen Bewertung wird nicht wie sonst mit einem Zinssatz abgezinst, welcher eine Risikoprämie enthält, sondern mit dem risikofreien Zinssatz. Somit kann man den Erwartungswert berechnen und mit dem risikofreien Zinssatz auf den heutigen Wert abzinsen. Daraus erhält man den fairen Preis, welcher sowohl in der risikoneutralen, als auch in der nicht risikoneutralen Welt gilt.
+Diese risiko-neutrale Ausfallwahrscheinlichkeit wird in unserem Fall direkt aus den Kreditausfall-Swap-Prämien errechnet. 
+
+Die Formel hierzu lautet: 
 \begin{equation}
 PD_{i,t}=\frac{a_t s_{i,t}}{a_t LGD_{i,t}+b_t s_{i,t}}
 \end{equation}
-$PD_{i,t}$ ist hierbei die risiko-neutrale Ausfallwahrscheinlichkeit, $s_{i,t}$ ist die Kreditausfall-Swap-Prämie, $LGD_{i,t}$ ist die Verlustquote. $a_t \equiv \int_{t}^{t+T} e^{-r \tau}d \tau$ und $b_t \equiv \int_{t}^{t+T} \tau e^{-r \tau}d \tau$, wbei $r$ der risikofreie Zinssatz ist.
+$PD_{i,t}$ ist hierbei die risiko-neutrale Ausfallwahrscheinlichkeit, $s_{i,t}$ ist die Kreditausfall-Swap-Prämie, $LGD_{i,t}$ ist die Verlustquote, $a_t \equiv \int_{t}^{t+T} e^{-r \tau}d \tau$ und $b_t \equiv \int_{t}^{t+T} \tau e^{-r \tau}d \tau$, wobei $r$ der risikofreie Zinssatz ist.
 
+Das die Ausfallwahrscheinlichkeit aus den Kreditausfall-Swaps bestimmt werden, ist eine risiko-neutrale Messung, da nicht nur die Verlustwahrscheinlichkeit, sondern auch die Risikoprämie mit einbezogen wird. Des Weiteren sind die Werte vorwärtsgerichtet, denn die Kreditausfall-Swap-Prämien sind für eine bestimmte Vertragsperiode gegeben. 
 
+Des Weiteren wird eine flache Terminstrukturkurve für die Ausfallintensität adaptiert. In der Realität könnte diese Annahme verletzt werden, es kommt aber nur zu geringer Beeinflussung, sodass das Gesamtergebnis nicht beeinträchtigt wird.
+\newpage
 \subsubsection{Kapitalrenditen-Korrelation}
-Test auf Seite 2!
+Um die Kreditausfall-Korrelation zu bestimmen, existieren zwei mögliche Ansätze.
+Zum einen kann man anhand von historischen Daten bezüglich der Kreditausfall die Korrelation bestimmen. Da es aber selten zu Kreditausfällen kommt sind diese Daten nicht sehr genau, vorallem im Bezug auf große Banken.
+Die zweite Möglichkeit ist die Kreditausfall-Korrelation indirekt zu bestimmen. Dies geschieht mit Hilfe der Gesamtkapitalrenditen-Korrelation unter der Berücksichtigung des Aktien- und Kreditmarktes. Hull and White (2004) schlugen jedoch vor, die Gesamtkapitalrenditen-Korrelation durch die Fremdkapitalrenditen-Korrelation darzustellen. Dies wird in diesem Fall auch genau so umgesetzt. Die Gründe dafür sind zum einen, dass das Fremdkapital der am schnellsten gehandelte Anlagegegenstand ist, denn man sieht die Veränderungen am Markt und am Anlagerisiko direkt durch schwankende Aktienpreise. Der zweite Grund ist, dass nur auf dem Aktienmarkt Daten in Echtzeit gegeben sind, was es möglich macht, Korrelation über kurze Zeiträume zu bestimmen, was vorher, bei Verwendung von Tageswerten, nicht möglich war.
+Durch diese hochfrequenten Analysen ist es nun möglich genauere Korrelationswerte als zuvor zu bestimmen.
+
+Um statt der Gesamtkapital-Korrelation die Fremdkapital-Korrelation zu nutzen, muss gegeben sein, dass ein konstanter Leverage-Effekt vorliegt, da nur in diesem Fall die Korrelationen des Gesamt -und Fremdkapital gleich sind. Dies ist jedoch nur über kürzere Zeitabschnitte gegeben, daher werden hier die Korrelationen immer für Zeitabschnitte, welche kürzer als ein Quartal sein, bestimmt. Dieser Zeitabschnitt wurde anhand von Beobachtungen bestätigt. Nachdem bleibt im Zeitraum von einem Monat der Leverage-Effekt bei elf von zwölf Banken konstant, nach zwei Monaten sind es noch 10 von 12 und nach drei Monaten sieben von zwölf. Deshalb sollte der Beobachtungsabschnitt unter einem Quartal liegen.
+
+Durch die Nutzung von Vorhersagen der Kapitalrenditen-Korrelation, statt dem Heranziehen von historischen Werten, sind die Werte konsistent mit der Vorhersage der Ausfallwahrscheinlichkeiten. Dadurch ist unser Indikator für das systemische Risiko vorwärtsgerichtet. 
+
 \newpage
 \subsection{Stresstest}
 
