--- a/Seminararbeit.tex
+++ b/Seminararbeit.tex
@@ -49,9 +49,16 @@ Vorgelegt von: \hfill Kevin Seidel \\
 \newpage
 \pagenumbering{arabic} 
 \setcounter{page}{1} 
-
-
 \section{Einleitung}
+Diese Seminararbeit untersucht die wissenschaftliche Arbeit ''A framework for assessing the systemic risk of major financial institutions'' von  Xia Huang, Hao Zhou und Haibin Zhu. Die Herren Huang, Zhou und Zhu stellen in ihrer Arbeit eine Möglichkeit vor, dass systemische Risiko anhand einer Kenngröße darzustellen, wodurch es verständlicher und leichter zu vergleichen ist. 
+
+Im speziellen wird hier das systemische Risiko des Finanzsektors untersucht. Dazu werden in einem Zeitraum von sieben Jahren, zwischen 2001 und 2008, die zwölf größten US-amerikanischen Finanzinstitute\footnote{Bank of America, Bank of New York, Bear Stearns, Citibank, Goldman Sachs, JP Morgan Chase, Lehman Brothers, Merrill Lynch, Morgan Stanley, State Street Corp., Wachovia und Wells Frago} betrachtet. 
+Als Kenngröße für das systemische Risiko wurde hier eine theoretische Versicherungsprämie gewählt, welche die Banken gegen Ausfälle in Höhe von 15\% oder mehr ihrer Gesamtverbindlichkeiten absichert. 
+Die Besonderheiten hierbei sind zum einen, dass die Berechnung dieser Kenngröße nicht anhand der Bilanzen, und damit quartalsweise, geschieht, sondern in sehr kurzen Zeitabständen, da auf Echtzeitdaten, wie CDS\footnote{Credit Default Swap}-Spreads und Aktienkurse für die Berechnung zurückgegriffen wird. Des Weiteren basieren die errechneten Größen nicht auf historischen Werten, sondern sind zukunftsorientiert, da sie unter anderem aus den Ausfallwahrscheinlichkeiten und CDS-Spreads errechnet werden.
+
+\newpage
+
+\section{Einleitung ALT}
 Diese Proseminararbeit behandelt die wissenschaftliche Publikation ''A framework for assessing the systemic risk of major financial institutions'' von Xia Huang, Hao Zhou und Haibin Zhu. In dieser Arbeit wird ein System zur Bestimmung des systemischen Risikos und ein Stresstest dieses Systems, am Beispiel der zwölf größten US-amerikanischen Banken, dargelegt.
 
 Diese Publikation ist in 3 grobe Abschnitte unterteilt. Im ersten Abschnitt wird auf das methodische Vorgehen des von den Autoren entwickelten Systems eingegangen. Diese Methodik ist wiederum in zwei Abschnitte unterteilt.
