new introduction nearly finished

--- a/Seminararbeit.tex
+++ b/Seminararbeit.tex
@@ -50,12 +50,19 @@ Vorgelegt von: \hfill Kevin Seidel \\
 \pagenumbering{arabic} 
 \setcounter{page}{1} 
 \section{Einleitung}
-Diese Seminararbeit untersucht die wissenschaftliche Arbeit ''A framework for assessing the systemic risk of major financial institutions'' von  Xia Huang, Hao Zhou und Haibin Zhu. Die Herren Huang, Zhou und Zhu stellen in ihrer Arbeit eine Möglichkeit vor, dass systemische Risiko anhand einer Kenngröße darzustellen, wodurch es verständlicher und leichter zu vergleichen ist. 
+Diese Seminararbeit untersucht die wissenschaftliche Arbeit ''A framework for assessing the systemic risk of major financial institutions'' von  Xia Huang, Hao Zhou und Haibin Zhu. 
+Die Herren Huang, Zhou und Zhu stellen in ihrer Arbeit eine Möglichkeit vor, dass systemische Risiko anhand einer Kenngröße darzustellen, wodurch der Risikowert einfacher zu verstehen und leichter zu vergleichen ist.
 
-Im speziellen wird hier das systemische Risiko des Finanzsektors untersucht. Dazu werden in einem Zeitraum von sieben Jahren, zwischen 2001 und 2008, die zwölf größten US-amerikanischen Finanzinstitute\footnote{Bank of America, Bank of New York, Bear Stearns, Citibank, Goldman Sachs, JP Morgan Chase, Lehman Brothers, Merrill Lynch, Morgan Stanley, State Street Corp., Wachovia und Wells Frago} betrachtet. 
-Als Kenngröße für das systemische Risiko wurde hier eine theoretische Versicherungsprämie gewählt, welche die Banken gegen Ausfälle in Höhe von 15\% oder mehr ihrer Gesamtverbindlichkeiten absichert. 
-Die Besonderheiten hierbei sind zum einen, dass die Berechnung dieser Kenngröße nicht anhand der Bilanzen, und damit quartalsweise, geschieht, sondern in sehr kurzen Zeitabständen, da auf Echtzeitdaten, wie CDS\footnote{Credit Default Swap}-Spreads und Aktienkurse für die Berechnung zurückgegriffen wird. Des Weiteren basieren die errechneten Größen nicht auf historischen Werten, sondern sind zukunftsorientiert, da sie unter anderem aus den Ausfallwahrscheinlichkeiten und CDS-Spreads errechnet werden.
+Im speziellen wird von Ihnen das systemische Risiko des Finanzsektors untersucht. Dazu werden in einem Zeitraum von sieben Jahren, zwischen 2001 und 2008, die zwölf größten US-amerikanischen Finanzinstitute\footnote{Bank of America, Bank of New York, Bear Stearns, Citibank, Goldman Sachs, JP Morgan Chase, Lehman Brothers, Merrill Lynch, Morgan Stanley, State Street Corp., Wachovia und Wells Frago} betrachtet. 
+Die Frage die sie sich dabei stellten, war, wie man das systemische Risiko am Besten bestimmen und auch anschaulich darstellen kann. Eine gute Darstellung ist in sofern hilfreich, dass man durch sie auf mögliche Ausfälle der Firmen schließen kann.
+Die Autoren kamen zu dem Schluss als Kenngröße für das systemische Risiko eine theoretische Versicherungsprämie zu wählen, welche die Banken in den nächsten 12 Wochen gegen Ausfälle in Höhe von 15\% oder mehr ihrer Gesamtverbindlichkeiten absichert. 
 
+Die Besonderheiten in dieser Arbeit sind zum einen, dass die Berechnung dieser Kenngröße nicht anhand der Bilanzen, und damit quartalsweise, geschieht, sondern in sehr kurzen Zeitabständen, da auf Echtzeitdaten, wie CDS\footnote{Credit Default Swap}-Spreads und Aktienkurse für die Berechnung zurückgegriffen wird. Des Weiteren basieren die errechneten Größen nicht auf historischen Werten, sondern sind zukunftsorientiert, da sie sich unter anderem aus den prognostizierten Ausfallwahrscheinlichkeiten und den Korrelationen der Kapitalrenditen, welche mittels der CDS-Spreads bestimmt werden, errechnen, welche ebenfalls vorwärtsgerichtet sind.
+
+Zusätzlich dazu, untersuchen sie, wie man dieses System auf Schwachstellen durchleuchtet und diese lokalisiert. Dies ist in sofern interessant, da man sich bei bekannten Schwachstellen besser auf die möglichen Auswirkungen vorbereiten  oder diese Schwachstellen direkt eliminieren kann. 
+Bei dieser Frage kommen sie zu dem Schluss, dass man die Schwachstellen am Deutlichsten mittels eines Stresstests herausstellen kann. Während dieses Stresstests wird zuerst ein Wirtschaftsmodell erstellt, auf welches dann im zweiten Schritt verschiedene Szenarien, sowohl historische als auch eigens erdachte, angewendet werden und untersucht wird, welche Auswirkungen diese Szenarien auf das Wirtschaftmodell haben. Dabei setzten sie auf ein integriertes Mikro-Makro-Modell, welches die wechselseitigen Auswirkungen zwischen dem Bankenmarkt und der restlichen Wirtschaft sehr gut abbildet.
+
+Mittels dieses Systems kommen die Autoren zu dem Schluss, das zwischen der Korrelation der Kapitalrenditen und der Ausfallwahrscheinlichkeit ein positiver Zusammenhang besteht, was heißt, dass bei steigender Ausfallwahrscheinlichkeit die Korrelation sinkt und andersherum bei sinkendem Ausfallrisiko die Korrelation steigt. Ausserdem ist die Korrelation stark von der Fed Funds Rate\footnote{Der Zinssatz, zu welchem sich die US-amerikanischen Banken und Sparkassen untereinander Geld leihen.} und dem Term Spread\footnote{Die Differenz zwischen Langzeitzinsen und Kurzzeitzinsen.} abhängig.
 \newpage
 
 \section{Einleitung ALT}
