--- a/Seminararbeit.tex
+++ b/Seminararbeit.tex
@@ -53,32 +53,27 @@ Vorgelegt von: \hfill Kevin Seidel \\
 Diese Seminararbeit untersucht die wissenschaftliche Arbeit ''A framework for assessing the systemic risk of major financial institutions'' von  Xia Huang, Hao Zhou und Haibin Zhu. 
 Die Herren Huang, Zhou und Zhu stellen in ihrer Arbeit eine Möglichkeit vor, dass systemische Risiko anhand einer Kenngröße darzustellen, wodurch der Risikowert einfacher zu verstehen und leichter zu vergleichen ist.
 
-Im speziellen wird von Ihnen das systemische Risiko des Finanzsektors untersucht. Dazu werden in einem Zeitraum von sieben Jahren, zwischen 2001 und 2008, die zwölf größten US-amerikanischen Finanzinstitute\footnote{Bank of America, Bank of New York, Bear Stearns, Citibank, Goldman Sachs, JP Morgan Chase, Lehman Brothers, Merrill Lynch, Morgan Stanley, State Street Corp., Wachovia und Wells Frago} betrachtet. 
+Im speziellen wird von Ihnen das systemische Risiko des Finanzsektors untersucht. Dazu werden in einem Zeitraum von sieben Jahren, zwischen 2001 und 2008, die zwölf größten US-amerikanischen Finanzinstitute\footnote{Bank of America, Bank of New York, Bear Stearns, Citibank, Goldman Sachs, JP Morgan Chase, Lehman Brothers, Merrill Lynch, Morgan Stanley, State Street Corp., Wachovia und Wells Frago.} betrachtet. 
 Die Frage die sie sich dabei stellten, war, wie man das systemische Risiko am Besten bestimmen und auch anschaulich darstellen kann. Eine gute Darstellung ist in sofern hilfreich, dass man durch sie auf mögliche Ausfälle der Firmen schließen kann.
 Die Autoren kamen zu dem Schluss als Kenngröße für das systemische Risiko eine theoretische Versicherungsprämie zu wählen, welche die Banken in den nächsten 12 Wochen gegen Ausfälle in Höhe von 15\% oder mehr ihrer Gesamtverbindlichkeiten absichert. 
 
-Die Besonderheiten in dieser Arbeit sind zum einen, dass die Berechnung dieser Kenngröße nicht anhand der Bilanzen, und damit quartalsweise, geschieht, sondern in sehr kurzen Zeitabständen, da auf Echtzeitdaten, wie CDS\footnote{Credit Default Swap}-Spreads und Aktienkurse für die Berechnung zurückgegriffen wird. Des Weiteren basieren die errechneten Größen nicht auf historischen Werten, sondern sind zukunftsorientiert, da sie sich unter anderem aus den prognostizierten Ausfallwahrscheinlichkeiten und den Korrelationen der Kapitalrenditen, welche mittels der CDS-Spreads bestimmt werden, errechnen, welche ebenfalls vorwärtsgerichtet sind.
+Die Besonderheiten in dieser Arbeit sind zum einen, dass die Berechnung dieser Kenngröße nicht anhand der Bilanzen, und damit quartalsweise, geschieht, sondern in sehr kurzen Zeitabständen, da auf Echtzeitdaten, wie CDS\footnote{Credit Default Swap.}-Spreads und Aktienkurse für die Berechnung zurückgegriffen wird. Des Weiteren basieren die errechneten Größen nicht auf historischen Werten, sondern sind zukunftsorientiert, da sie sich unter anderem aus den prognostizierten Ausfallwahrscheinlichkeiten und den Korrelationen der Kapitalrenditen, welche mittels der CDS-Spreads bestimmt werden, errechnen, welche ebenfalls vorwärtsgerichtet sind.
 
 Zusätzlich dazu, untersuchen sie, wie man dieses System auf Schwachstellen durchleuchtet und diese lokalisiert. Dies ist in sofern interessant, da man sich bei bekannten Schwachstellen besser auf die möglichen Auswirkungen vorbereiten  oder diese Schwachstellen direkt eliminieren kann. 
 Bei dieser Frage kommen sie zu dem Schluss, dass man die Schwachstellen am Deutlichsten mittels eines Stresstests herausstellen kann. Während dieses Stresstests wird zuerst ein Wirtschaftsmodell erstellt, auf welches dann im zweiten Schritt verschiedene Szenarien, sowohl historische als auch eigens erdachte, angewendet werden und untersucht wird, welche Auswirkungen diese Szenarien auf das Wirtschaftmodell haben. Dabei setzten sie auf ein integriertes Mikro-Makro-Modell, welches die wechselseitigen Auswirkungen zwischen dem Bankenmarkt und der restlichen Wirtschaft sehr gut abbildet.
 
 Mittels dieses Systems kommen die Autoren zu dem Schluss, das zwischen der Korrelation der Kapitalrenditen und der Ausfallwahrscheinlichkeit ein positiver Zusammenhang besteht, was heißt, dass bei steigender Ausfallwahrscheinlichkeit die Korrelation sinkt und andersherum bei sinkendem Ausfallrisiko die Korrelation steigt. Ausserdem ist die Korrelation stark von der Fed Funds Rate\footnote{Der Zinssatz, zu welchem sich die US-amerikanischen Banken und Sparkassen untereinander Geld leihen.} und dem Term Spread\footnote{Die Differenz zwischen Langzeitzinsen und Kurzzeitzinsen.} abhängig.
+
+Im folgenden werde ich zuerst das Vorgehen zur Bestimmung des Indikators für das systemische Risiko, in diesem Fall die theoretische Versicherungsprämie, untersuchen und darauffolgend das System des Stresstests genauer erörtern.
 \newpage
 
-\section{Einleitung ALT}
-Diese Proseminararbeit behandelt die wissenschaftliche Publikation ''A framework for assessing the systemic risk of major financial institutions'' von Xia Huang, Hao Zhou und Haibin Zhu. In dieser Arbeit wird ein System zur Bestimmung des systemischen Risikos und ein Stresstest dieses Systems, am Beispiel der zwölf größten US-amerikanischen Banken, dargelegt.
+\section{Bestimmung eines Indikators für das systemische Risiko}
+Um eine Kenngröße für das systemische Risiko zu ermitteln, müssen zuerst die zugrundeliegenden Wert ermittelt werden. In diesem Fall setzt sich diese aus dem Risikoprofil, der prognostizierten Ausfallwahrscheinlichkeit und der Korrelation der Vermögensrenditen zusammen. Erst nachdem diese Größen ermittelt wurden, lässt sich darauf ein Indikator für das systemisches Risiko bilden.
+\subsection{Ermittlung der risikoneutralen Ausfallwahrscheinlichkeiten}
+Die risikoneutrale Ausfallwahrscheinlichkeit is einer der Hauptbestandteile zur Bestimmung des systemischen Risikos. In dieser Arbeit wird die Ausfallwahrscheinlichkeit anhand von CDS-Spreads bestimmt.
+Ein Credit Default Swap ist eine Art Verischerung für Kreditgeber. Der Kreditgeber zahlt eine Vericherungsprämie, den CDS Spread, an einen Sicherungsgeber und sichert sich damit gegen diverse Ereignisse, wie Bankrott der Kreditnehmers oder Zahlungsausfälle, ab. Die Höhe der Versicherungsprämie ist abhängig von der Ausfallwahrscheinlichtkeit und dem Verlust bei Zahlungsausfall.  Tritt ein solches Ereignisse ein, zahlt der Sicherungsgeber eine Ausgleichszahlung an der Kreditgeber.
 
-Diese Publikation ist in 3 grobe Abschnitte unterteilt. Im ersten Abschnitt wird auf das methodische Vorgehen des von den Autoren entwickelten Systems eingegangen. Diese Methodik ist wiederum in zwei Abschnitte unterteilt.
-
-Im ersten Abschnitt der Methodik geht des um das systemische Risiko. Es wird hier als Prämie für eine Versicherung gegen finanzielle Ausfälle innerhalb der nächsten 12 Monate dargestellt. Diese Versicherungsprämie errechnet sich aus den vorhergesagten Ausfallwahrscheinlichkeiten und der Korrelation der Unternehmensrentabilität. Die Messungen sind marktbasiert und damit deutlich hochfrequenter als eine Auswertung anhand von Bilanzen, welche meist quartalsweise erscheinen. 
-
-Der zweite Abschnitt der Methodik befasst sich mit dem Stresstest ihres Systems zur Bestimmung des systemischen Risikos. Für die Durchführung dieses Stresstests wird ein integriertes Mikro-Makro-Modell genutzt, welche nicht nur die Auswirkungen des Marktes auf das Bankwesen berücksichtigt, sondern auch die Rückwirkung des Bankwesens auf den Rest der Ökonomie. Dieser Stresstest besteht aus zwei Schritten. Im ersten Schritt wird das ökonomisches Modell dazu genutzt den Zusammenhang zwischen der Anlagenqualität und den zugrundeliegenden Faktoren zu prüfen. Der zweite Schritt besteht darin, mit Hilfe des Modells, die Auswirkungen von extremen Änderungen der zugrundeliegenden Faktoren, auf den Finanzmarkt zu bestimmen. Hierbei werden, in der Regel, historische oder hypothetische Szenarien verwendet.
-
-Auf die verwendeten Beispieldaten wird im zweiten Abschnitt der Arbeit eingegangen. Hierbei wurden die Daten und Werte der zwölf größten amerikanischen Banken über die Jahre 2001 bis 2008 genutzt.
-
-Im dritten und letzten Abschnitt werden die Ergebnisse dargelegt, welche durch Anwendung der Methoden aus dem ersten Teil, entstanden sind. 
-\newpage
-
+Aus den CDS Spread lässt sich nun nach Duffie (1999) und Tarashev und Zhu (2008)\footnote{vgl. Huang et al S.5.} direkt die risikoneutrale Ausfallwahrscheinlichkeit bestimmen. Für die errechnete Ausfallwahrscheinlichkeit müssen jedoch einige Vorraussetzungen erfüllt sein. Zum einen muss eine konstante und risikofreie Zinsstruktur vorliegen, zum anderen muss eine flache Terminstruktur der Ausfallintensität gegeben sein. Des Weiteren muss Unabhängigkeit zwischen dem Armortisationsrisiko und dem Ausfallrisiko bestehen.
 \section{Methodisches Vorgehen}
 \subsection{Bestimmung des systemischen Risikos}
 Zur Bestimmung des systemischen Risikos werden zwei Schritte durchlaufen. Zunächst wird das Risikoprofil eines Portfolios bestimmt. Dies geschieht anhand der Ausfallwahrscheinlichkeit und der Kapitalrenditen-Korrelation.
@@ -125,6 +120,10 @@ Für die Analysen wurden wöchentlich aktualisierte Kreditausfall-Swap-Prämien,
 \section{Fazit}
 \newpage
 \section{Literaturverzeichnis}
+
+Duffie, D., 1999. Credit swap valuation. Financial Analysts Journal 55, 73-87.
+
+Tarashev, N., Zhu, H., 2008. The pricing of portfolio credit risk: Evidence from the credit derivatives Market. Journal of Fixed Income 18, 5-24.
 \newpage
 
 \section{Anhang}
