added some stuff

--- a/Seminararbeit.tex
+++ b/Seminararbeit.tex
@@ -98,6 +98,10 @@ In kurzen Zeitabständen kann man jedoch davon ausgehen, dass der Leverage relat
 Durch diese Herangehensweise, unter der Berücksichtigung der aktuellen Marktentwicklung, statt der Analyse von historischen Daten, ist eine vorwärtsgerichtete Untersuchung der Korrelationen möglich. Das deckt sich mit unserer Berechnung der Ausfallwahrscheinlichkeiten welche ebenfalls zukunftsorientiert sind. Aus diesen beiden Tatsachen folgt, dass auch unser Indikator für das systemische Risiko ein vorwärtsgerichteter Wert und somit zukunftsorientiert ist.
 
 \subsection{Bestimmung des Indikators für das systemische Risiko}
+Nachdem die Variablen, welche zur Berechnung des systemischen Risikos benötigt werden, erfolgreich bestimmt wurden, lässt sich nur die Kenngröße für das systemische Risiko bestimmen. Die geschieht mit Hilfe der 'portfolio 'credit risk methodology''\footnote{vgl. Huang et al S.9 Z.6f.}. Durch diese Methode ist es möglich einen Indikator für das systemische Risiko unserer Banken zu erstellen. Wie schon zuvor erwähnt, handelt es sich bei diesem Indikator um die theoretische Versicherungssumme gegen Zahlungsausfälle innerhalb der nächsten 12 Monate, welche 15 Prozent oder mehr der gesamten Verbindlickeiten entsprechen.
+
+Für die Berechnung werden die gesamten Schuldverschreibungen der Banken, gewichtet nach Höhe der Gesamtverbindlichkeiten der einzelnen Banken, in einem hypotetischen Portfolio zusammengefasst. Für dieses Portfolio wird nun die risikoneutrale Erwartung von Kreditverlusten, welche gleich oder höher einem kleinen Anteil der Gesamtverbindlichkeiten sind, errechnet.
+
 
 
 \section{Methodisches Vorgehen}
